<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_gestio_alumnes"
            android:icon="@drawable/baseline_groups_2_24"
            android:title="@string/gestio_usuaris_menu" />
        <item
            android:id="@+id/modifica_usuari"
            android:icon="@drawable/baseline_create_24"
            android:title="@string/modifica_usuari" />
        <item
            android:id="@+id/busca_usuari"
            android:icon="@drawable/baseline_search_24"
            android:title="@string/busca_usuari" />
        <item
            android:id="@+id/llista_usuaris"
            android:icon="@drawable/baseline_list_24"
            android:title="@string/llista_usuaris" />
    </group>
</menu>